# crates_popular

./: Cargo.toml
cargo_home/registry/cache/github.com-1ecc6299db9ec823/: aho-corasick-0.6.9.crate  autocfg-0.1.2.crate  byteorder-1.3.1.crate  cfg-if-0.1.6.crate  itoa-0.4.3.crate  libc-0.2.48.crate  num-traits-0.2.6.crate  num_cpus-1.10.0.crate  pkg-config-0.3.14.crate  rand_jitter-0.1.3.crate  rand_os-0.1.2.crate  rand_pcg-0.1.1.crate  redox_syscall-0.1.51.crate  regex-1.1.0.crate  regex-syntax-0.6.5.crate  rustc-serialize-0.3.24.crate  ryu-0.2.7.crate  serde-1.0.87.crate  serde_derive-1.0.87.crate  serde_json-1.0.38.crate  smallvec-0.6.8.crate  syn-0.15.26.crate  utf8-ranges-1.0.2.crate  winapi-0.3.6.crate
cargo_home/registry/src/github.com-1ecc6299db9ec823/autocfg-0.1.2/: .cargo_vcs_info.json
cargo_home/registry/src/github.com-1ecc6299db9ec823/redox_syscall-0.1.51/: .cargo_vcs_info.json
