[package]
name = "popular"
version = "0.1.0"
authors = ["Michael Henry <drmikehenry@drmikehenry.com>"]
edition = "2018"

[dependencies]
libc = "0.2.48"
bitflags = "1.0.4"
rand = "0.6.5"
log = "0.4.6"
lazy_static = "1.2.0"
serde = "1.0.87"
syn = "0.15.26"
winapi = "0.3.6"
regex-syntax = "0.6.5"
regex = "1.1.0"
memchr = "2.2.0"
num-traits = "0.2.6"
quote = "0.6.11"
unicode-xid = "0.1.0"
aho-corasick = "0.6.9"
byteorder = "1.3.1"
serde_json = "1.0.38"
thread_local = "0.3.6"
cfg-if = "0.1.6"
rustc-serialize = "0.3.24"
utf8-ranges = "1.0.2"
time = "0.1.42"
winapi-build = "0.1.1"
kernel32-sys = "0.2.2"
num_cpus = "1.10.0"
itoa = "0.4.3"
url = "1.7.2"
serde_derive = "1.0.87"
semver = "0.9.0"
pkg-config = "0.3.14"
